# layers

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NEXT.md  README.md  RELEASE.md  build.rs  cbindgen.toml  cliff.toml  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/instructions/: review.instructions.md
.github/workflows/: benchmark.yml  ci.yml  lint.yml
benches/: my_benchmark.rs  pointer_depth_benchmark.rs
doc/: architecture.md  engine.md  scratchpad.md  uml.md
docs/: all.html  damage-tracking.md  damage.md  engine-update-stages.md  index.html  layer-followers.md  layers_inspector.md  macro.layer_trees.html  macro.layer_trees_opt!.html  macro.layer_trees_opt.html  pointers.md  portals.md  sidebar-items.js
docs/api/: index.html  sidebar-items.js
docs/drawing/: fn.draw_layer.html  fn.draw_scene.html  fn.node_tree_list.html  fn.node_tree_list_visible.html  fn.paint_node_tree.html  fn.print_scene.html  fn.render_node_tree.html  index.html
docs/easing/: trait.Interpolate.html
docs/engine/: enum.PointerEventType.html  enum.TransactionEventType.html  index.html  sidebar-items.js  struct.AnimatedNodeChange.html  struct.AnimationCallback.html  struct.AnimationRef.html  struct.AnimationState.html  struct.Engine.html  struct.HandlerRef.html  struct.NodeRef.html  struct.PointerCallback.html  struct.SceneNode.html  struct.Timestamp.html  struct.TransactionCallback.html  struct.TransactionRef.html  trait.Command.html  trait.SyncCommand.html
docs/guides/: index.html  sidebar-items.js
docs/prelude/: enum.LayerError.html  enum.Shape.html  fn.draw_scene.html  fn.render_node_tree.html  index.html  sidebar-items.js  struct.ContentDrawError.html  struct.ContentDrawFunction.html  struct.Layer.html  struct.Matrix.html  struct.PointerHandlerFunction.html  struct.Scene.html  trait.DrawScene.html  trait.Effect.html  trait.Interpolate.html  type.Image.html
docs/renderer/: index.html
docs/shape/: enum.Shape.html
docs/types/: enum.BlendMode.html  enum.BorderStyle.html  enum.PaintColor.html  index.html  sidebar-items.js  struct.BorderRadius.html  struct.BorderRadiusDiff.html  struct.Color.html  struct.GradientLinear.html  struct.GradientRadial.html  struct.M44.html  struct.Matrix.html  struct.Point.html  struct.Point3d.html  struct.Rectangle.html  struct.Size.html  struct.V3.html  type.Image.html  type.Picture.html
docs/utils/: fn.draw_image_content.html  fn.image_from_svg.html  fn.load_svg_image.html  fn.save_image.html  index.html  sidebar-items.js
docs/view/: enum.LayerTreeBuilderError.html  index.html  macro.layer_trees.html  macro.layer_trees_opt.html  sidebar-items.js  struct.LayerTree.html  struct.LayerTreeBuilder.html  struct.View.html  trait.BuildLayerTree.html  trait.RenderLayerTree.html  trait.ViewRenderFunction.html  type.PostRenderHook.html  type.PreRenderHook.html
examples/hello-c/: build_library.sh  meson.build
examples/hello-c/include/: init_window.h
examples/hello-c/src/: init_window.c  main.c  main.cpp  window_events.c  window_keyboard.c  window_pointer.c
examples/hello-content/: Cargo.toml
examples/hello-content/src/: main.rs
examples/hello-dom/: Cargo.toml
examples/hello-dom/src/: app_switcher.rs  list.rs  main.rs  popup_menu.rs  toggle.rs
examples/hello-dsl/: Cargo.toml
examples/hello-dsl/src/: main.rs
examples/hello-filters/: Cargo.toml
examples/hello-filters/assets/: debug.sksl  genie.sksl  shader.sksl
examples/hello-filters/src/: main.rs
examples/hello-portals/: Cargo.toml
examples/hello-portals/src/: main.rs
examples/hello-rust/: Cargo.toml
examples/hello-rust/src/: main.rs
examples/hello-spring/: Cargo.toml
examples/hello-subtrees/: Cargo.toml
examples/hello-views/: Cargo.toml
lay_rs/: all.html  index.html  macro.layer_trees.html  macro.layer_trees_opt.html  sidebar-items.js
lay_rs/api/: index.html
lay_rs/drawing/: fn.draw_layer.html  fn.draw_scene.html  fn.node_tree_list.html  fn.node_tree_list_visible.html  fn.paint_node_tree.html  fn.print_scene.html  fn.render_node_tree.html  index.html  sidebar-items.js
lay_rs/easing/: trait.Interpolate.html
lay_rs/engine/: enum.PointerEventType.html  enum.TransactionEventType.html  index.html  sidebar-items.js  struct.AnimatedNodeChange.html  struct.AnimationRef.html  struct.AnimationState.html  struct.HandlerRef.html  struct.LayersEngine.html  struct.NodeRef.html  struct.PointerCallback.html  struct.SceneNode.html  struct.Timestamp.html  struct.TransactionCallback.html  struct.TransactionRef.html  trait.Command.html  trait.SyncCommand.html
lay_rs/prelude/: fn.draw_scene.html  fn.render_node_tree.html  index.html  sidebar-items.js  struct.ContentDrawError.html  struct.ContentDrawFunction.html  struct.Layer.html  struct.Matrix.html  struct.PointerHandlerFunction.html  struct.Scene.html  trait.DrawScene.html  trait.Effect.html  trait.Interpolate.html  type.Image.html
lay_rs/renderer/: index.html  sidebar-items.js
lay_rs/types/: enum.BlendMode.html  enum.BorderStyle.html  enum.PaintColor.html  index.html  struct.BorderRadius.html  struct.BorderRadiusDiff.html  struct.Color.html  struct.GradientLinear.html  struct.GradientRadial.html  struct.M44.html  struct.Matrix.html  struct.Point.html  struct.Point3d.html  struct.Rectangle.html  struct.Size.html  struct.V3.html  type.Image.html  type.Picture.html
lay_rs/utils/: fn.draw_image_content.html  fn.load_svg_image.html  fn.save_image.html  index.html  (+1 more)
layers/: all.html  index.html  macro.layer_trees.html  macro.layer_trees_opt.html  sidebar-items.js
src/: easing.rs  example.rs  layer.rs  lib.rs  main.rs  playground.rs  prelude.rs  rendering.rs  shape.rs  skcache.rs  types.rs  utils.rs
tests/: animation_handlers.rs  animations.rs  content.rs  damage.rs  diff.rs  dispatch.rs  engine.rs  entities.rs  image_cache.rs  keyframe_animations.rs  layer_contains.rs  node.rs  occlusion_scene.rs  opacity.rs  par_iter.rs  pointer_handlers.rs  render_layer.rs  render_list.rs  skp_occlusion.rs  state.rs  storage.rs  subtree_buffers.rs  transaction_handler.rs  types.rs  view_builder.rs
(+1163 files in other folders)
