[package]
name = "layers"
version = "0.3.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"] # Creates dynamic lib

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gl-rs = { package = "gl", version = "0.14.0" }
foreign-types-shared = "0.1.1"
indexmap = { version = "1.9.1", features = ["rayon"] }
indextree = { version = "=4.5.0", features = ["par_iter", "deser"] }
rayon = "1.5.3"
libm = "0.2.2"
bitflags = "1.3"
paste = "1.0"
enum_dispatch = "0"
oklab = "=1.0.0"
taffy = { version = "0.5", features = ["serde"] }
diff-struct = "0.5.1"
derive_builder = "0.12.0"
puffin_http = { version = "0.13", optional = true }
profiling = { version = "1.0" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dependencies.skia-safe]
version = "=0.70"
# this set of features is required for enabling to use the pre-built
# binaries of skia-safe
[target.'cfg(target_os = "linux")'.dependencies.skia-safe]
version = "=0.70"
features = [
    "binary-cache",
    "egl",
    "gl",
    "svg",
    "textlayout",
    "vulkan",
    "wayland",
    "webp",
    "x11",
]

[target.'cfg(target_os = "macos")'.dependencies.skia-safe]
version = "=0.70"
features = ["binary-cache", "gl", "metal", "svg", "textlayout", "webp"]

[dev-dependencies]
criterion = "0.3"
paste = "1.0"

[dependencies.layers_debug]
path = "packages/debugger_browser"
optional = true

[dependencies.layers-debug-server]
path = "packages/debugger_server"
optional = true

[features]
export-skia = []
export-taffy = []
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
default = ["export-skia", "export-taffy"]
debugger = ["layers-debug-server"]


[[bench]]
name = "my_benchmark"
harness = false

[build-dependencies]
cbindgen = "0.24.3"

[workspace]
members = [
    "examples/hello-rust",
    "examples/hello-dom",
    "examples/hello-content",
]
