[package]
name = "lay-rs"
version = "0.6.1"
edition = "2021"
build = "build.rs"
rust-version = "1.83.0"

[lib]
crate-type = ["lib", "cdylib"] # Creates dynamic lib

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
taffy = { version = "0.5", features = ["serde"] }
gl-rs = { package = "gl", version = "0.14.0" }
indexmap = { version = "1.9.1", features = ["rayon"] }
indextree = { version = "4.7.2", features = ["par_iter", "deser"] }
foreign-types-shared = "0.1.1"
rayon = "1.7.0"
libm = "0.2.2"
bitflags = "1.3"
paste = "1.0"
enum_dispatch = "0"
oklab = "=1.0.0"
diff-struct = "0.5.1"
derive_builder = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
puffin_http = { version = "0.13", optional = true }
profiling = { version = "1.0" }
bezier_easing = "0.1.1"
tokio = { version = "1", features = ["full"] }
resvg = "0.44.0"
usvg = "0.44.0"
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }

[dependencies.skia-safe]
# git = "https://github.com/rust-skia/rust-skia"
version = "=0.80"
# path = "../rust-skia/skia-safe"
[dependencies.skia-bindings]
# git = "https://github.com/rust-skia/rust-skia"
version = "=0.80"
# path = "../rust-skia/skia-bindings"

[target.'cfg(target_os = "linux")'.dependencies.skia-safe]
# git = "https://github.com/rust-skia/rust-skia"
# path = "../rust-skia/skia-safe"
version = "=0.80"
features = ["binary-cache", "all-linux"]

[target.'cfg(target_os = "macos")'.dependencies.skia-safe]
# git = "https://github.com/rust-skia/rust-skia"
version = "=0.80"
# path = "../rust-skia/skia-safe"
features = ["binary-cache", "gl", "metal", "svg", "textlayout", "webp"]

[dev-dependencies]
criterion = { version = "0.5.1", features = [
    "async_futures",
    "async_tokio",
    "html_reports",
] }
paste = "1.0"
glutin = "0.29"
winit = "0.28"
image-compare = "0.4.1"
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.layers_debug]
path = "packages/debugger_browser"
optional = true

[dependencies.layers-debug-server]
path = "packages/debugger_server"
optional = true

[features]
export-skia = []
export-taffy = []
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
default = ["export-skia", "export-taffy"]
debugger = ["layers-debug-server"]
debug_cmd = ["layers_debug"]
layer_state = []

[[bench]]
name = "my_benchmark"
harness = false

[build-dependencies]
cbindgen = "0.24.3"

[workspace]
members = [
    "examples/hello-spring",
    "examples/hello-views",
    "examples/hello-content",
    "examples/hello-filters",
    "examples/hello-portals",
]
