[package]
name = "hello-dom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layers = { path = "../../", features = ["export-skia"] }
glutin = "0.28"
winit = "0.26.1"
gl-rs = { package = "gl", version = "0.14.0" }
rand = "0.8.5"
image = "0.24.5"
mt-dom = "0.21.1"
