[package]
name = "hello-dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layers-dsl = { path = "../../packages/layers-dsl" }
layers-dsl-core = { path = "../../packages/layers-dsl-core" }
proc-macro2 = "1.0.52"
syn = { version = "1.0.109", features = [
    "parsing",
    "printing",
    "full",
    "extra-traits",
] }
layers = { path = "../../" }
