[package]
name = "hello-filters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lay-rs = { path = "../../", features = [
    "export-skia",
    "export-taffy",
    "debugger",
] }
glutin = "0.29"
winit = "0.28"
gl-rs = { package = "gl", version = "0.14.0" }
rand = "0.8.5"
image = "0.24.5"
mt-dom = "0.21.1"
tokio = { version = "1", features = ["full"] }
