[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28"
winit = "0.26.1"
gl-rs = { package = "gl", version = "0.14.0" }
hello = { path = "../../" }
rand = "0.8.5"
